# patrickdesjardins

./: .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .prettierignore  0447cfc1da6761302a93b24498957bd1d2415a14-975b76533f3a07443ce9.js  0447cfc1da6761302a93b24498957bd1d2415a14-975b76533f3a07443ce9.js.map  0447cfc1da6761302a93b24498957bd1d2415a14-adc3a7a603a83688d1e1.js  0447cfc1da6761302a93b24498957bd1d2415a14-adc3a7a603a83688d1e1.js.map  0447cfc1da6761302a93b24498957bd1d2415a14-d3b2070009e9fa3076cc.js  0447cfc1da6761302a93b24498957bd1d2415a14-d3b2070009e9fa3076cc.js.map  175-861127790376af0f27e7.js  175-861127790376af0f27e7.js.map  231-dbf125c639c9668a17db.js  231-dbf125c639c9668a17db.js.map  404.html  589-44ca5108512ec3822cde.js  589-44ca5108512ec3822cde.js.map  5c1de9b29aefe57d250239097ed24b55b104dd6f-74e37c3e62149284deea.js  5c1de9b29aefe57d250239097ed24b55b104dd6f-74e37c3e62149284deea.js.map  987-16f43b95e696267905b7.js  987-16f43b95e696267905b7.js.map  AGENTS.md  CNAME  README.md  _headers  a9a7754c-d2ebffb26d4d41b41d5e.js  a9a7754c-d2ebffb26d4d41b41d5e.js.map  app-087fbb8246a69b6e6988.js  app-087fbb8246a69b6e6988.js.map  app-1ce48249f6fb4af2eabc.js  app-1ce48249f6fb4af2eabc.js.map  app-1d760e90c4fbe27bf471.js  app-1d760e90c4fbe27bf471.js.map  app-26ecfa96dce8535e7089.js  app-26ecfa96dce8535e7089.js.map  app-86ec85eb8145c8e59a38.js  app-86ec85eb8145c8e59a38.js.map  (+187 more)
tools/: README.md  pyproject.toml  social_common.py
tools/linkedin/: get_id.py  post.py
tools/mastodon/: post.py
tools/search/: README.md  main.py  requirements.txt
(+10046 files in other folders)
