[project]
name = "patrickdesjardins-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.18.2",
    "sentence-transformers",
    "scikit-learn",
    "PyYAML>=6.0",
    "requests>=2.32.0",
    "requests-oauthlib>=2.0.0",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.10.8",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
